--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<link rel="stylesheet" href="/css/ospace.css">
+		<link rel="stylesheet" href="/openspacetest/css/ospace.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 		<header class="header">
 			<h1 class="header__title">[Open Space logo]</h1>
-			<img class="header__logo" src="/images/logo.png">
+			<img class="header__logo" src="/openspacetest/images/logo.png">
 			<nav class="nav">
 				<ul class="nav__list nav__list--sub">
 					
