--- a/events/solitude-the-exhibition/index.html
+++ b/events/solitude-the-exhibition/index.html
@@ -59,28 +59,18 @@
 <main class="main--eventinfo">
 
 	<div class="grid__left">
-		<img class="grid__image" src="/openspacetest/images/">
-		<p>Recommended for <span class="make-bold"></span>.</p>
-		<p>Runtime: .</p>
+		<img class="grid__image" src="/openspacetest/images/concept-events/perfart.jpg">
+		<p>Recommended for <span class="make-bold">ages 16+</span>.</p>
+		<p>Runtime: TBA.</p>
 	</div>
 
 	<section class="grid__info">
-		<h3 class="h--1 no-margins"></h3>
-		<h4 class="heading h--2 no-margins"></h4>
+		<h3 class="h--1 no-margins">Solitude_The Exhibition</h3>
+		<h4 class="heading h--2 no-margins">An Open Space Artist-in-Residence</h4>
 
 		<div class="paragraph p--2">
-			<p class="spacer-below-2"></p>
-			
-<img class="grid__image" src="/openspacetest/images/yamandu.jpeg">
-
-<section class="grid__info">
-	<h3 class="main__title">Yamandu Costa</h3>
-	<p>Music</p>
-
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-	<link rel="stylesheet" type="text/css" href="https://www.brownpapertickets.com/widget_v671.css" /> <DIV ID="bpt_eventbody"><CENTER><BR><BR>Brown Paper Tickets Ticket Widget Loading...<BR><BR><A HREF="https://www.brownpapertickets.com/event/5468562">Click Here</A> to visit the Brown Paper Tickets event page.</CENTER><BR><BR></DIV> <script src="https://www.brownpapertickets.com/eventwidget.js?event=5468562&nodescription=1" type="text/javascript" language="javascript"></script> <script src="https://www.brownpapertickets.com/widget_v671.js?event=5468562" type="text/javascript" language="javascript"></script>
-</section>
+			<p class="spacer-below-2">Art</p>
+			<p>This is the copy for Sample Event 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 		</div>
 
