--- a/renting/index.html
+++ b/renting/index.html
@@ -57,21 +57,105 @@
 
 
 
-<main class="main--page-no-sidebar">
+<main class="main--page-sidebar">
 	
 		<img class="grid__hero" src="/openspacetest/images/parkour.jpeg">
 	
 	<section class="grid__main">
 		
-<h3 class="main__title">Classes & Workshops</h3>
+<h3 class="main__title">Rental Information</h3>
 
 <p class="paragraph p--2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<p>[This page isn't ready yet, but go look at the "Upcoming Events" page for an idea of what this could be.]</p>
+<a class="section__button" href="/openspacetest/events">Go to our rental form</a>
 
-</section>
+<div class="paragraph p--2">
+	<h5 class="heading h--3">Performance venues</h5>
+	<ul>
+		<li>Grand Hall</li>
+		<li>The Bruce Black Box</li>
+		<li>Atrium</li>
+	</ul>
+	<h5 class="heading h--3">Studio spaces</h5>
+	<ul>
+		<li>Movement Studio</li>
+		<li>Tahoma Room</li>
+		<li>Chrysalis Green Room</li>
+		<li>Gallery</li>
+	</ul>
+	<h5 class="heading h--3">Warehouse facilities</h5>
+	<ul>
+		<li>O2</li>
+	</ul>
+	<h5 class="heading h--3">Outdoor areas</h5>
+	<ul>
+		<li>The Great Lawn</li>
+		<li>Summer Stage</li>
+		<li>West Lawn</li>
+	</ul>
+</div>
 
 	</section>
+
+	
+		<section class="grid__sidebar">
+
+	<h3 class="heading h--3">Latest news</h3>
+	<div class="gallery gallery--sidebar">
+		
+		<div class="gallery__item">
+			<!-- <img class="gallery__img" src="/openspacetest/images/cover.png"> -->
+			<p class="paragraph p--2">More Dates Added to Solitude_The Exhibition</p>
+			<a class="gallery__link">Read more ></a>
+		</div>
+		
+		<div class="gallery__item">
+			<!-- <img class="gallery__img" src="/openspacetest/images/cover.png"> -->
+			<p class="paragraph p--2">Press Release: Our First Artist In Residence</p>
+			<a class="gallery__link">Read more ></a>
+		</div>
+		
+	</div>
+
+	<h3 class="heading h--3">Upcoming events</h3>
+	<div class="gallery gallery--sidebar">
+		
+			<a class="gallery__link" href="/openspacetest/events/lakou-mizik" target="_self">
+				<div class="gallery__item gallery__item--card card">
+					<img class="gallery__img" src="/openspacetest/images/concept-events/lakou.jpeg">
+					<div class="card__bottom">
+						<p class="p--3">Music</p>
+						<h4 class="p--2 spacer-below-3">Lakou Mizik</h4>
+						<p class="p--3">Mar 04</p>
+					</div>
+				</div>
+			</a>
+		
+			<a class="gallery__link" href="/openspacetest/events/doctor-strange-in-the-multiverse-of-madness" target="_self">
+				<div class="gallery__item gallery__item--card card">
+					<img class="gallery__img" src="/openspacetest/images/concept-events/drstrange2.jpg">
+					<div class="card__bottom">
+						<p class="p--3">Night Light Drive-in</p>
+						<h4 class="p--2 spacer-below-3">Doctor Strange in the Multiverse of Madness</h4>
+						<p class="p--3">Mar 06</p>
+					</div>
+				</div>
+			</a>
+		
+			<a class="gallery__link" href="/openspacetest/events/much-ado-about-nothing" target="_self">
+				<div class="gallery__item gallery__item--card card">
+					<img class="gallery__img" src="/openspacetest/images/concept-events/ws.jpeg">
+					<div class="card__bottom">
+						<p class="p--3">Theatre</p>
+						<h4 class="p--2 spacer-below-3">Much Ado About Nothing</h4>
+						<p class="p--3">Mar 20</p>
+					</div>
+				</div>
+			</a>
+		
+	</div>
+
+</section>
 
 	
 </main>
